Almost v1.0.0 A shitload of changes

--- a/app/src/main/res/layout/layout_hunt.xml
+++ b/app/src/main/res/layout/layout_hunt.xml
@@ -8,8 +8,7 @@
     android:padding="16dp"
     android:elevation="2dp"
     android:background="@color/colorWhite"
-    android:foreground="?attr/selectableItemBackground"
-    tools:showIn="@layout/content_main">
+    android:foreground="?attr/selectableItemBackground">
     <ImageView
         android:id="@+id/image_view_thumbnail"
         android:layout_width="60dp"
